--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,56 @@
-.App {
+ul,
+li {
+  display: inline-block;
+  margin-left: 40px;
+}
+a {
+  text-decoration: none;
+}
+#fotter {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+  gap: 20px;
+  width: 100%;
+  position: absolute;
+  top: 630px;
+  text-align: center;
+  background-color: aquamarine;
+}
+@media (min-width: 500px) {
+  #footer {
+    position: relative;
+    display: flex;
+    justify-content: flex-start;
+  }
+}
+#signup {
+  width: 300px;
   text-align: center;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.header-image {
+  width: 20px;
+}
+.header-class {
+  display: inline;
+  padding-left: 15px;
+}
+.header {
+  background-color: grey;
+  padding: 10px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.header-button {
+  text-align: center;
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  justify-content: end;
+  float: right;
+  padding: 8px;
+  margin-top: 5px;
 }
-
-.App-link {
-  color: #61dafb;
+#formik-head {
+  width: 350px;
+  margin-top: 10px;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+#outlined-basic {
+  margin-bottom: 10px;
 }
